Updated handle shipment

--- a/assets/lang/merchant_ar.json
+++ b/assets/lang/merchant_ar.json
@@ -4,19 +4,19 @@
   "address": "العناوين",
   "about_us": "عن",
   "home_main_portion_quick_look": "نظرة سريعة علي حسابك",
-  "home_main_portion_quick_look_shipment": "شحناتي",
+  "home_main_portion_quick_look_shipment": "طلباتي",
   "home_main_portion_quick_look_wallet": "المحفظة",
   "home_main_portion_how_to_use_weevo": "كيف تستخدم ويفو",
   "home_main_portion_show_more": "عرض المزيد",
   "home_main_portion_interested_in_title_section": "مواضيع تهمك",
   "home_notification_portion_title": "ألأشعارات",
   "home_chat_portion_title": "الرسائل",
-  "home_chat_portion_chat_item_title": "محادثة شحنة رقم",
+  "home_chat_portion_chat_item_title": "محادثة طلب رقم",
   "home_chat_portion_chat_screen_input_hint_message": "اكتب رسالتك هنا",
   "home_more_portion_title": "المزيد",
   "home_more_portion_account_word": "الحساب",
   "home_more_portion_account_type": "مندوب",
-  "home_more_portion_your_delivered_shipments": "الشحنات",
+  "home_more_portion_your_delivered_shipments": "الطلبات",
   "home_more_portion_edit_profile": "تعديل الحساب",
   "edit_profile_screen_title": "معلومات الحساب",
   "home_more_portion_wallet": "المحفظة",
@@ -35,19 +35,19 @@
   "new_shipment_offer_based_portion_title": "طلبات التوصيل",
   "new_shipment_offer_based_portion_description": "تقديم عروض",
   "new_shipment_available_to_deliver_portion_title": "المتاحة للتوصيل",
-  "new_shipment_available_to_deliver_portion_description": "قبول الشحنة",
-  "shipment_summary_title": "ملخص الشحنات",
+  "new_shipment_available_to_deliver_portion_description": "قبول الطلب",
+  "shipment_summary_title": "ملخص الطلبات",
   "shipment_summary_courier_applied_to_shipment_title": "مقدم عليها",
   "shipment_summary_waiting_for_delivery_shipment_title": "في انتظار التوصيل",
   "shipment_summary_in_my_way_shipment_title": "في الطريق",
   "shipment_summary_on_delivery_shipment_title": "قيد التوصيل",
   "shipment_summary_delivered_shipment_title": "تم تنفيذها",
   "shipment_summary_returned_shipment_title": "مرتجعة",
-  "shipment_details_title": "شحنة رقم",
-  "shipment_details_shipment_details": "بيانات الشحنة",
-  "shipment_details_receiving_shipment_details": "بيانات استلام الشحنة",
+  "shipment_details_title": "طلب رقم",
+  "shipment_details_shipment_details": "بيانات الطلب",
+  "shipment_details_receiving_shipment_details": "بيانات استلام الطلب",
   "shipment_details_merchant_review": "تقييمات",
-  "bulk_shipment_summary_total_cost": "التكلفة الكلية للشحنات",
+  "bulk_shipment_summary_total_cost": "التكلفة الكلية للطلبات",
   "wallet_current_balance": "رصيدك الحالي",
   "wallet_main_portion_title": "الرئيسية",
   "wallet_deposit_portion_title": "إيداع",
@@ -65,7 +65,7 @@
   "wallet_deposit_portion_meeza_card_payment_method_card_cvv_hint_text": "الرمز السري cvv",
   "wallet_deposit_portion_meeza_card_payment_method_card_deposit_request_button": "طلب أيداع",
   "loading_dialog_content": "برجاء الانتظار",
-  "cancel_shipment_deduction_dialog_content": "سيتم خصم رسوم إلغاء الشحنة هل تود ذلك ؟",
+  "cancel_shipment_deduction_dialog_content": "سيتم خصم رسوم إلغاء الطلب هل تود ذلك ؟",
   "cancel_shipment_dialog_agreed_button": "أوافق",
   "cancel_shipment_dialog_declined_button": "لا أوافق",
   "send_offer_dialog_merchant_offer_word": "عرض التاجر",
@@ -74,15 +74,15 @@
   "send_offer_dialog_offer_button_text": "تقديم عرض",
   "send_offer_dialog_offer_sent_successfully_title": "تم أرسال عرضك للتاجر",
   "send_offer_dialog_offer_sent_error_title": "حدث خطا",
-  "send_offer_dialog_offer_sent_successfully_content": "سيتم خصم مقدم الشحنة ونسبة ويفو\nمن الشحن عند قبول التاجر للعرض\nوتتحول لشحنة قيد التنفيذ",
-  "send_offer_dialog_offer_sent_error_content": "يرجي المحاولة مرة اخري\nيمكنك الدخول للشحنات الجديدة\nوتقديم العرض",
+  "send_offer_dialog_offer_sent_successfully_content": "سيتم خصم مقدم الطلب ونسبة ويفو\nمن الشحن عند قبول التاجر للعرض\nوتتحول لطلب قيد التنفيذ",
+  "send_offer_dialog_offer_sent_error_content": "يرجي المحاولة مرة اخري\nيمكنك الدخول للطلبات الجديدة\nوتقديم العرض",
   "send_offer_dialog_offer_sent_successfully_button_text": "حسناً",
   "apply_to_shipment_button_text": "وصل الأوردر",
   "apply_to_shipment_dialog_agreed_button": "موافق",
   "apply_to_shipment_dialog_declined_button": "إلغاء",
-  "apply_to_shipment_done_dialog": "الشحنة بقت قيد التنفيذ وتم خصم المبلغ من المحفظة بالاضافة لنسبة ويفو",
+  "apply_to_shipment_done_dialog": "الطلب بقت قيد التنفيذ وتم خصم المبلغ من المحفظة بالاضافة لنسبة ويفو",
   "apply_to_shipment_error_dialog": "حدث خطأ",
-  "shipment_empty_message_content": "لا يوجد لديك شحنات",
+  "shipment_empty_message_content": "لا يوجد لديك طلبات",
   "network_error_dialog_message_content": "تأكد من الأتصال بالأنترنت",
   "network_error_dialog_try_again_text": "حاول مرة أخري",
   "sign_up_delete_current_data_warning_dialog_content": "'سيتم مسح كل البيانات التي تم ملؤها\nهل تود ذلك'",
@@ -113,12 +113,12 @@
   "cancel_reset_password_dialog_content": "هل تود الرجوع لصفحة الدخول",
   "login_wrong_email_or_password_dialog_content": "الايميل او الباسورد غير صحيح",
   "login_wrong_email_or_password_dialog_title": "خطأ",
-  "shipment_delivered_successfully_dialog_content": "تم استلام شحنتك بنجاح",
+  "shipment_delivered_successfully_dialog_content": "تم استلام طلبك بنجاح",
   "decline_shipment_successfully_dialog_content": "تم الانسحاب من العرض بنجاح",
-  "shipment_delivered_successfully_after_rating_dialog_content": "تم تسلم شحنتك بنجاح",
-  "merchant_to_courier_shipment_handover_qrcode_dialog_content": "عشان تستلم الشحنة \nلازم تعمل مسح لرمز ال Qrcode \nاو تكتب الكود اللي عند التاجر",
-  "courier_to_customer_shipment_handover_qrcode_dialog_content": "عشان تستلم الشحنة \nلازم تعمل مسح لرمز ال Qrcode \nاو تكتب الكود اللي عند العميل",
-  "cancel_shipment_by_merchant_dialog_content": "تم الغاء الشحنة من قبل التاجر\nيمكنك التقديم علي شحنات اخري\nمن صفحة الشحنات المتاحة",
+  "shipment_delivered_successfully_after_rating_dialog_content": "تم تسلم طلبك بنجاح",
+  "merchant_to_courier_shipment_handover_qrcode_dialog_content": "عشان تستلم الطلب \nلازم تعمل مسح لرمز ال Qrcode \nاو تكتب الكود اللي عند التاجر",
+  "courier_to_customer_shipment_handover_qrcode_dialog_content": "عشان تستلم الطلب \nلازم تعمل مسح لرمز ال Qrcode \nاو تكتب الكود اللي عند العميل",
+  "cancel_shipment_by_merchant_dialog_content": "تم الغاء الطلب من قبل التاجر\nيمكنك التقديم علي طلبات اخري\nمن صفحة الطلبات المتاحة",
   "cancel_shipment_dialog_content": "هل تود إلغاء الشحن",
   "privacy_policy_agreement_dialog_content": "أوافق علي سياسة الخصوصية والشروط والأحكام",
   "rating_error_dialog_content": "أدخل القيم بطريقة صحيحة",
@@ -127,13 +127,13 @@
   "new_offer_notification_title": "عرض جديد",
   "cancel_shipment_notification_title": "تم إلغاء الشحن",
   "decline_shipment_offer_notification_title": "تم سحب العرض",
-  "shipment_delivered_notification_title": "تم استلام شحنتك بنجاح",
-  "shipment_100_miles_before_arrive_to_merchant_notification_title": "الشحنة في الطريق اليك",
+  "shipment_delivered_notification_title": "تم استلام طلبك بنجاح",
+  "shipment_100_miles_before_arrive_to_merchant_notification_title": "الطلب في الطريق اليك",
   "shipment_on_my_way_callback_notification_title": "المندوب في الطريق اليك",
   "shipment_on_arrived_callback_notification_title": "المندوب وصل",
-  "shipment_on_returned_callback_notification_title": "الشحنة مرتجع المندوب في الطريق اليك",
+  "shipment_on_returned_callback_notification_title": "الطلب مرتجع المندوب في الطريق اليك",
   "shipment_on_handover_callback_notification_title": "المندوب وصل لمكان التسليم",
-  "shipment_handover_successfully_notification_title": "تم تسليم شحنتك بنجاح",
+  "shipment_handover_successfully_notification_title": "تم تسليم طلبك بنجاح",
   "shipment_courier_cancel_shipping_notification_title": "تم إلغاء الشحن",
   "wallet_filter_hint_text_from_date": "الفترة من",
   "wallet_filter_hint_text_to_date": "الفترة إلي",
